source/objects/Bluescape_API_Token__c/Bluescape_API_Token__c.object-meta.xml
<CustomObject>
    <label>Bluescape API Token</label>
    <nameField>
        <label>Bluescape API Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bluescape API Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>