source/objects/Bluescape_API_Token__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <label>Access Token</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>