source/objects/Bluescape_API_Token__c/fields/API_Version__c.field-meta.xml
<CustomField>
    <fullName>API_Version__c</fullName>
    <description>UAT1: v2
Production: &lt;blank&gt;</description>
    <label>API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>