source/objects/Bluescape_API_Token__c/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <label>Client ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>