source/objects/Bluescape_API_Token__c/fields/Error_Email__c.field-meta.xml
<CustomField>
    <fullName>Error_Email__c</fullName>
    <label>Error Email</label>
    <type>Email</type>
</CustomField>