source/objects/Bluescape_API_Token__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <label>Expires At</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>