source/objects/Bluescape_API_Token__c/fields/Getting_Started_Workspace__c.field-meta.xml
<CustomField>
    <fullName>Getting_Started_Workspace__c</fullName>
    <description>Workspace ID of the getting started workspace to copy into the trial/demo org

Production: HrShLlpF3UdVrxrrILKt
Staging: 9GCvfOxhiyUTAO1bSMUC</description>
    <label>Getting Started Workspace</label>
    <length>20</length>
    <type>Text</type>
</CustomField>