source/objects/Bluescape_API_Token__c/fields/Getting_Started_Workspace_Organization__c.field-meta.xml
<CustomField>
    <fullName>Getting_Started_Workspace_Organization__c</fullName>
    <description>The organization ID that contains the Getting Started workspace
Production: 4543
Stg1: 42586</description>
    <label>Getting Started Workspace Organization</label>
    <length>20</length>
    <type>Text</type>
</CustomField>