source/objects/Bluescape_API_Token__c/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <defaultValue>&#39;apps.us&#39;</defaultValue>
    <description>Set to the instance being used. It will be embedded into the api url (ex - https://api.&lt;instance&gt;.bluescape.com)</description>
    <inlineHelpText>Examples: apps.us, stg1, uat1</inlineHelpText>
    <label>Instance</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>