source/objects/Bluescape_API_Token__c/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>